tests/generics/async_await_outside.ax
async fn fetch() -> i32:
    return 42

fn main():
    let x = await fetch()
